top 5 features in logisticRegr_model_w_gridsearch.ipynb

--- a/models/logisticRegr_model_w_gridsearch.ipynb
+++ b/models/logisticRegr_model_w_gridsearch.ipynb
@@ -24,8 +24,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:51:39.104388Z",
-     "start_time": "2020-06-12T01:51:38.137840Z"
+     "end_time": "2020-06-12T09:19:46.164820Z",
+     "start_time": "2020-06-12T09:19:43.326792Z"
     }
    },
    "outputs": [],
@@ -72,8 +72,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:51:39.109153Z",
-     "start_time": "2020-06-12T01:51:39.106006Z"
+     "end_time": "2020-06-12T09:19:46.169725Z",
+     "start_time": "2020-06-12T09:19:46.166833Z"
     }
    },
    "outputs": [],
@@ -107,8 +107,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:51:39.460038Z",
-     "start_time": "2020-06-12T01:51:39.111446Z"
+     "end_time": "2020-06-12T09:19:46.509668Z",
+     "start_time": "2020-06-12T09:19:46.171899Z"
     }
    },
    "outputs": [
@@ -136,8 +136,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:51:39.481442Z",
-     "start_time": "2020-06-12T01:51:39.462170Z"
+     "end_time": "2020-06-12T09:19:46.531158Z",
+     "start_time": "2020-06-12T09:19:46.511408Z"
     }
    },
    "outputs": [
@@ -401,8 +401,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:51:39.485572Z",
-     "start_time": "2020-06-12T01:51:39.483192Z"
+     "end_time": "2020-06-12T09:19:46.535019Z",
+     "start_time": "2020-06-12T09:19:46.532610Z"
     }
    },
    "outputs": [],
@@ -415,8 +415,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:51:39.490439Z",
-     "start_time": "2020-06-12T01:51:39.486996Z"
+     "end_time": "2020-06-12T09:19:46.541075Z",
+     "start_time": "2020-06-12T09:19:46.537817Z"
     }
    },
    "outputs": [
@@ -472,8 +472,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:51:39.494921Z",
-     "start_time": "2020-06-12T01:51:39.491948Z"
+     "end_time": "2020-06-12T09:19:46.546162Z",
+     "start_time": "2020-06-12T09:19:46.543214Z"
     }
    },
    "outputs": [],
@@ -491,8 +491,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:51:39.500697Z",
-     "start_time": "2020-06-12T01:51:39.498111Z"
+     "end_time": "2020-06-12T09:19:46.549740Z",
+     "start_time": "2020-06-12T09:19:46.547557Z"
     }
    },
    "outputs": [],
@@ -513,8 +513,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:51:39.509890Z",
-     "start_time": "2020-06-12T01:51:39.503476Z"
+     "end_time": "2020-06-12T09:19:46.557057Z",
+     "start_time": "2020-06-12T09:19:46.551221Z"
     }
    },
    "outputs": [],
@@ -559,8 +559,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:52:03.718214Z",
-     "start_time": "2020-06-12T01:51:39.511594Z"
+     "end_time": "2020-06-12T09:20:08.833858Z",
+     "start_time": "2020-06-12T09:19:46.558543Z"
     },
     "scrolled": true
    },
@@ -601,8 +601,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:52:03.909426Z",
-     "start_time": "2020-06-12T01:52:03.720243Z"
+     "end_time": "2020-06-12T09:20:09.019360Z",
+     "start_time": "2020-06-12T09:20:08.835891Z"
     }
    },
    "outputs": [
@@ -642,8 +642,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:52:04.294184Z",
-     "start_time": "2020-06-12T01:52:03.911584Z"
+     "end_time": "2020-06-12T09:20:10.111022Z",
+     "start_time": "2020-06-12T09:20:09.021629Z"
     }
    },
    "outputs": [
@@ -686,8 +686,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:52:04.302011Z",
-     "start_time": "2020-06-12T01:52:04.295568Z"
+     "end_time": "2020-06-12T09:20:10.119066Z",
+     "start_time": "2020-06-12T09:20:10.112393Z"
     }
    },
    "outputs": [
@@ -714,8 +714,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:52:04.309952Z",
-     "start_time": "2020-06-12T01:52:04.303763Z"
+     "end_time": "2020-06-12T09:20:10.126410Z",
+     "start_time": "2020-06-12T09:20:10.120516Z"
     }
    },
    "outputs": [
@@ -794,8 +794,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:52:04.792149Z",
-     "start_time": "2020-06-12T01:52:04.311663Z"
+     "end_time": "2020-06-12T09:20:10.610360Z",
+     "start_time": "2020-06-12T09:20:10.127914Z"
     },
     "scrolled": true
    },
@@ -893,12 +893,18 @@
     "    print('-----------------')\n",
     "    print('THRESHOLD =  ' + str(thresh))\n",
     "    y_pred_thresh = np.where(clf_w_best_params.predict_proba(Xt)[:,1] > thresh, 1, 0)\n",
-    "    acc = accuracy_score(yt, y_pred_thresh)\n",
     "    print('F1: ' + str(f1_score(yt, y_pred_thresh)))\n",
     "    print('Precision: ' + str(precision_score(yt, y_pred_thresh)))\n",
     "    print('Recall: ' + str(recall_score(yt, y_pred_thresh)))\n",
     "    print(confusion_matrix(yt, y_pred_thresh, normalize='true'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -912,8 +918,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:52:04.803674Z",
-     "start_time": "2020-06-12T01:52:04.793909Z"
+     "end_time": "2020-06-12T09:20:10.621972Z",
+     "start_time": "2020-06-12T09:20:10.612186Z"
     }
    },
    "outputs": [
@@ -1005,8 +1011,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:52:04.808632Z",
-     "start_time": "2020-06-12T01:52:04.805365Z"
+     "end_time": "2020-06-12T09:20:10.627148Z",
+     "start_time": "2020-06-12T09:20:10.623647Z"
     }
    },
    "outputs": [],
@@ -1016,11 +1022,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T01:52:04.819355Z",
-     "start_time": "2020-06-12T01:52:04.810331Z"
+     "end_time": "2020-06-12T10:27:09.377981Z",
+     "start_time": "2020-06-12T10:27:09.370047Z"
     }
    },
    "outputs": [
@@ -1081,223 +1087,35 @@
        "      <td>0.125380</td>\n",
        "      <td>0.125380</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>oobventday1</td>\n",
-       "      <td>0.124414</td>\n",
-       "      <td>0.124414</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>diabetes</td>\n",
-       "      <td>-0.113045</td>\n",
-       "      <td>0.113045</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>admissionweight</td>\n",
-       "      <td>0.097868</td>\n",
-       "      <td>0.097868</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>ethnicity_Asian</td>\n",
-       "      <td>-0.072729</td>\n",
-       "      <td>0.072729</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>immunosuppression</td>\n",
-       "      <td>0.069101</td>\n",
-       "      <td>0.069101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>bmi</td>\n",
-       "      <td>0.066068</td>\n",
-       "      <td>0.066068</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>ethnicity_Other/Unknown</td>\n",
-       "      <td>-0.060035</td>\n",
-       "      <td>0.060035</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>midur</td>\n",
-       "      <td>-0.057448</td>\n",
-       "      <td>0.057448</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>unitstaytype_readmit</td>\n",
-       "      <td>0.053379</td>\n",
-       "      <td>0.053379</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>verbal</td>\n",
-       "      <td>-0.049337</td>\n",
-       "      <td>0.049337</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>eyes</td>\n",
-       "      <td>-0.045898</td>\n",
-       "      <td>0.045898</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>ethnicity_African American</td>\n",
-       "      <td>0.042906</td>\n",
-       "      <td>0.042906</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>aids</td>\n",
-       "      <td>-0.042722</td>\n",
-       "      <td>0.042722</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>motor</td>\n",
-       "      <td>-0.041253</td>\n",
-       "      <td>0.041253</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>unitstaytype_admit</td>\n",
-       "      <td>-0.031359</td>\n",
-       "      <td>0.031359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>hepaticfailure</td>\n",
-       "      <td>-0.028144</td>\n",
-       "      <td>0.028144</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>admissionheight</td>\n",
-       "      <td>0.026028</td>\n",
-       "      <td>0.026028</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>ethnicity_Hispanic</td>\n",
-       "      <td>0.023400</td>\n",
-       "      <td>0.023400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>lymphoma</td>\n",
-       "      <td>0.019891</td>\n",
-       "      <td>0.019891</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>unitstaytype_transfer</td>\n",
-       "      <td>-0.012571</td>\n",
-       "      <td>0.012571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>metastaticcancer</td>\n",
-       "      <td>0.010235</td>\n",
-       "      <td>0.010235</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>ethnicity_Caucasian</td>\n",
-       "      <td>0.009572</td>\n",
-       "      <td>0.009572</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>leukemia</td>\n",
-       "      <td>-0.009532</td>\n",
-       "      <td>0.009532</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>gender_Female</td>\n",
-       "      <td>-0.007551</td>\n",
-       "      <td>0.007551</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>cirrhosis</td>\n",
-       "      <td>0.005679</td>\n",
-       "      <td>0.005679</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>thrombolytics</td>\n",
-       "      <td>-0.005126</td>\n",
-       "      <td>0.005126</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>visitnumber</td>\n",
-       "      <td>0.003636</td>\n",
-       "      <td>0.003636</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>ethnicity_Native American</td>\n",
-       "      <td>0.003218</td>\n",
-       "      <td>0.003218</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       feature      coef  abs_weight\n",
-       "32                   heartrate  0.330072    0.330072\n",
-       "26                         ima -0.188193    0.188193\n",
-       "29                oobintubday1  0.185426    0.185426\n",
-       "25                    activetx  0.184510    0.184510\n",
-       "0                          age  0.125380    0.125380\n",
-       "28                 oobventday1  0.124414    0.124414\n",
-       "30                    diabetes -0.113045    0.113045\n",
-       "1              admissionweight  0.097868    0.097868\n",
-       "6              ethnicity_Asian -0.072729    0.072729\n",
-       "23           immunosuppression  0.069101    0.069101\n",
-       "3                          bmi  0.066068    0.066068\n",
-       "10     ethnicity_Other/Unknown -0.060035    0.060035\n",
-       "27                       midur -0.057448    0.057448\n",
-       "12        unitstaytype_readmit  0.053379    0.053379\n",
-       "14                      verbal -0.049337    0.049337\n",
-       "16                        eyes -0.045898    0.045898\n",
-       "5   ethnicity_African American  0.042906    0.042906\n",
-       "18                        aids -0.042722    0.042722\n",
-       "15                       motor -0.041253    0.041253\n",
-       "11          unitstaytype_admit -0.031359    0.031359\n",
-       "19              hepaticfailure -0.028144    0.028144\n",
-       "2              admissionheight  0.026028    0.026028\n",
-       "8           ethnicity_Hispanic  0.023400    0.023400\n",
-       "20                    lymphoma  0.019891    0.019891\n",
-       "13       unitstaytype_transfer -0.012571    0.012571\n",
-       "21            metastaticcancer  0.010235    0.010235\n",
-       "7          ethnicity_Caucasian  0.009572    0.009572\n",
-       "22                    leukemia -0.009532    0.009532\n",
-       "4                gender_Female -0.007551    0.007551\n",
-       "24                   cirrhosis  0.005679    0.005679\n",
-       "17               thrombolytics -0.005126    0.005126\n",
-       "31                 visitnumber  0.003636    0.003636\n",
-       "9    ethnicity_Native American  0.003218    0.003218"
+       "         feature      coef  abs_weight\n",
+       "32     heartrate  0.330072    0.330072\n",
+       "26           ima -0.188193    0.188193\n",
+       "29  oobintubday1  0.185426    0.185426\n",
+       "25      activetx  0.184510    0.184510\n",
+       "0            age  0.125380    0.125380"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fw"
+    "fw5 = fw.iloc[0:5]\n",
+    "fw5"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
