print how many ppatients remain after removing patients who are too heavy/light/short/tall

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-13T18:22:49.153585Z",
-     "start_time": "2020-06-13T18:22:46.658519Z"
+     "end_time": "2020-06-14T03:15:40.794446Z",
+     "start_time": "2020-06-14T03:15:31.160742Z"
     }
    },
    "outputs": [],
@@ -63,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-13T18:22:53.949535Z",
-     "start_time": "2020-06-13T18:22:49.156220Z"
+     "end_time": "2020-06-14T03:17:24.375832Z",
+     "start_time": "2020-06-14T03:16:58.500449Z"
     }
    },
    "outputs": [
@@ -102,11 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-13T18:22:54.292425Z",
-     "start_time": "2020-06-13T18:22:53.951456Z"
+     "end_time": "2020-06-14T03:17:27.199690Z",
+     "start_time": "2020-06-14T03:17:24.727772Z"
     }
    },
    "outputs": [],
@@ -140,14 +140,112 @@
     "patient = patient[(patient['admissionweight'] > 40) & \\\n",
     "                   (patient['admissionweight'] < 300)]\n",
     "\n",
-    "# Remove patients who are shorter than 100 cm (3.2 ft) or taller than 230 cm (~7.5 ft)\n",
-    "patient = patient[(patient['admissionheight'] > 100 ) & (patient['admissionheight'] < 230)]\n",
-    "\n",
-    "# Remove patients with BMI > 150\n",
-    "patient = patient[patient['bmi'] < 150]\n",
-    "\n",
-    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-14T03:17:36.146880Z",
+     "start_time": "2020-06-14T03:17:36.115827Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(157500, 30)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patient.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-14T03:18:07.421145Z",
+     "start_time": "2020-06-14T03:18:07.232062Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Remove patients who are shorter than 100 cm (3.2 ft) or taller than 230 cm (~7.5 ft)\n",
+    "patient = patient[(patient['admissionheight'] > 100 ) & (patient['admissionheight'] < 230)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-14T03:18:09.013378Z",
+     "start_time": "2020-06-14T03:18:08.994347Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(157014, 30)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patient.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-14T03:18:15.212234Z",
+     "start_time": "2020-06-14T03:18:14.913460Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Remove patients with BMI > 150\n",
+    "patient = patient[patient['bmi'] < 150]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-14T03:18:19.091774Z",
+     "start_time": "2020-06-14T03:18:19.069315Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(157011, 30)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patient.shape"
    ]
   },
   {
