changed app outputs risk relative to mean probability. mean probability is saved in pickle file

--- a/notebooks/logisticRegr_model_w_featsel_gridsearch.ipynb
+++ b/notebooks/logisticRegr_model_w_featsel_gridsearch.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:31:58.413220Z",
-     "start_time": "2020-06-19T00:31:58.394660Z"
+     "end_time": "2020-06-19T10:07:32.222866Z",
+     "start_time": "2020-06-19T10:07:32.205475Z"
     }
    },
    "outputs": [],
@@ -37,8 +37,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:32:00.030572Z",
-     "start_time": "2020-06-19T00:31:58.415173Z"
+     "end_time": "2020-06-19T10:07:33.914194Z",
+     "start_time": "2020-06-19T10:07:32.224874Z"
     }
    },
    "outputs": [],
@@ -95,8 +95,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:32:00.627834Z",
-     "start_time": "2020-06-19T00:32:00.032537Z"
+     "end_time": "2020-06-19T10:07:34.545882Z",
+     "start_time": "2020-06-19T10:07:33.916481Z"
     }
    },
    "outputs": [
@@ -381,8 +381,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:32:35.891090Z",
-     "start_time": "2020-06-19T00:32:00.629273Z"
+     "end_time": "2020-06-19T10:08:10.976920Z",
+     "start_time": "2020-06-19T10:07:34.547346Z"
     }
    },
    "outputs": [],
@@ -401,8 +401,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:32:35.922657Z",
-     "start_time": "2020-06-19T00:32:35.892678Z"
+     "end_time": "2020-06-19T10:08:11.007629Z",
+     "start_time": "2020-06-19T10:08:10.978607Z"
     }
    },
    "outputs": [
@@ -426,8 +426,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:32:35.952723Z",
-     "start_time": "2020-06-19T00:32:35.925313Z"
+     "end_time": "2020-06-19T10:08:11.036302Z",
+     "start_time": "2020-06-19T10:08:11.009019Z"
     }
    },
    "outputs": [
@@ -458,8 +458,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:33:23.173844Z",
-     "start_time": "2020-06-19T00:32:35.954993Z"
+     "end_time": "2020-06-19T10:08:58.143214Z",
+     "start_time": "2020-06-19T10:08:11.039736Z"
     }
    },
    "outputs": [
@@ -572,8 +572,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:33:23.212014Z",
-     "start_time": "2020-06-19T00:33:23.175996Z"
+     "end_time": "2020-06-19T10:08:58.179498Z",
+     "start_time": "2020-06-19T10:08:58.146463Z"
     },
     "scrolled": true
    },
@@ -602,8 +602,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:33:23.243149Z",
-     "start_time": "2020-06-19T00:33:23.213841Z"
+     "end_time": "2020-06-19T10:08:58.212080Z",
+     "start_time": "2020-06-19T10:08:58.181268Z"
     }
    },
    "outputs": [],
@@ -617,8 +617,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:33:23.272165Z",
-     "start_time": "2020-06-19T00:33:23.244504Z"
+     "end_time": "2020-06-19T10:08:58.244902Z",
+     "start_time": "2020-06-19T10:08:58.214262Z"
     }
    },
    "outputs": [
@@ -652,8 +652,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:33:38.209467Z",
-     "start_time": "2020-06-19T00:33:23.273718Z"
+     "end_time": "2020-06-19T10:09:13.278354Z",
+     "start_time": "2020-06-19T10:08:58.246889Z"
     }
    },
    "outputs": [
@@ -695,8 +695,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:33:38.504059Z",
-     "start_time": "2020-06-19T00:33:38.211541Z"
+     "end_time": "2020-06-19T10:09:13.552311Z",
+     "start_time": "2020-06-19T10:09:13.280318Z"
     }
    },
    "outputs": [
@@ -706,6 +706,7 @@
      "text": [
       "Test AUC is 0.7089215907198213\n",
       "Min. probability is 0.0451\n",
+      "Mean probability is 0.4325\n",
       "Max. probability is 0.9043\n",
       "--------------\n",
       "Train AUC is 0.7301254403914428\n",
@@ -721,19 +722,27 @@
     "                                       C=0.01, fit_intercept=True, penalty='l2')\n",
     "clf_w_best_params.fit(X_trainval_imp, y_trainval)\n",
     "\n",
-    "model_and_scaler = {'model': clf_w_best_params, 'scaler': scaler, \\\n",
-    "                    'feature_mask': rfecv.support_, \\\n",
-    "                    'vars_cont': vars_cont, 'vars_categ': vars_categ}\n",
-    "pickle.dump(model_and_scaler, \\\n",
-    "            open('../models/model_scaler_logRegr_featsel' + now_to_str() + '.pickle', 'wb'))\n",
+    "\n",
     "\n",
     "y_pred = clf_w_best_params.predict(X_test_imp)\n",
     "y_probs = clf_w_best_params.predict_proba(X_test_imp)[:,1]\n",
     "\n",
     "y_probs_TRAIN = clf_w_best_params.predict_proba(X_trainval_imp)[:,1]\n",
     "\n",
+    "\n",
+    "\n",
+    "model_and_scaler = {'model': clf_w_best_params, \n",
+    "                    'scaler': scaler, \\\n",
+    "                    'feature_mask': rfecv.support_, \\\n",
+    "                    'vars_cont': vars_cont, \n",
+    "                    'vars_categ': vars_categ, \n",
+    "                    'y_probs_TRAIN_mean': y_probs_TRAIN.mean()}\n",
+    "pickle.dump(model_and_scaler, \\\n",
+    "            open('../models/model_scaler_logRegr_featsel' + now_to_str() + '.pickle', 'wb'))\n",
+    "\n",
     "print('Test AUC is ' + str(roc_auc_score(y_test,y_probs)))\n",
     "print('Min. probability is {:.4f}'.format(y_probs.min()))\n",
+    "print('Mean probability is {:.4f}'.format(y_probs_TRAIN.mean()))\n",
     "print('Max. probability is {:.4f}'.format(y_probs.max()))\n",
     "print('--------------')\n",
     "print('Train AUC is ' + str(roc_auc_score(y_trainval ,y_probs_TRAIN)))\n",
@@ -753,9 +762,10 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:33:38.644853Z",
-     "start_time": "2020-06-19T00:33:38.505989Z"
-    }
+     "end_time": "2020-06-19T10:09:13.708061Z",
+     "start_time": "2020-06-19T10:09:13.554207Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -798,8 +808,33 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:33:39.136916Z",
-     "start_time": "2020-06-19T00:33:38.646535Z"
+     "end_time": "2020-06-19T10:09:13.739690Z",
+     "start_time": "2020-06-19T10:09:13.710408Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.43202006286716405"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_probs.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-19T10:09:14.291273Z",
+     "start_time": "2020-06-19T10:09:13.741106Z"
     }
    },
    "outputs": [
@@ -842,11 +877,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:33:39.164999Z",
-     "start_time": "2020-06-19T00:33:39.138691Z"
+     "end_time": "2020-06-19T10:09:14.322491Z",
+     "start_time": "2020-06-19T10:09:14.292637Z"
     }
    },
    "outputs": [
@@ -856,7 +891,7 @@
        "array([0.38370095, 0.38071453, 0.38071288])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,11 +911,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:33:39.201153Z",
-     "start_time": "2020-06-19T00:33:39.166255Z"
+     "end_time": "2020-06-19T10:09:14.358732Z",
+     "start_time": "2020-06-19T10:09:14.323931Z"
     }
    },
    "outputs": [
@@ -954,7 +989,7 @@
        "4             aids -0.272629    0.272629"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,11 +1004,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:33:39.231151Z",
-     "start_time": "2020-06-19T00:33:39.202654Z"
+     "end_time": "2020-06-19T10:09:14.388865Z",
+     "start_time": "2020-06-19T10:09:14.360280Z"
     }
    },
    "outputs": [],
@@ -983,11 +1018,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T00:33:39.268661Z",
-     "start_time": "2020-06-19T00:33:39.237426Z"
+     "end_time": "2020-06-19T10:09:14.422293Z",
+     "start_time": "2020-06-19T10:09:14.390387Z"
     }
    },
    "outputs": [
@@ -1061,7 +1096,7 @@
        "2      visitnumber  1.034758    1.034758"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
